<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_msgs</name>
  <version>1.0.1</version>
  <description>Message definitions for TurtleBot3 (ROS 1)</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

